Salesforce CPQ/main/default/objects/PriceCondition__c/PriceCondition__c.object-meta.xml
<CustomObject>
    <customHelpPage>PriceConditionHelp</customHelpPage>
    <description>Condition that fires the parent price rule.</description>
    <label>Price Condition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>