Salesforce CPQ/main/default/objects/PriceCondition__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Price rule running this condition.</description>
    <inlineHelpText>Price rule running this condition.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>PriceRule__c</referenceTo>
    <relationshipLabel>Price Conditions</relationshipLabel>
    <relationshipName>PriceConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>