Salesforce CPQ/main/default/objects/PriceCondition__c/fields/TestedFormula__c.field-meta.xml
<CustomField>
    <fullName>TestedFormula__c</fullName>
    <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
    <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
    <label>Tested Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>