Salesforce CPQ/main/default/objects/PriceCondition__c/validationRules/Config_attr_config_scoped_price_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Config_attr_config_scoped_price_rules</fullName>
    <active>true</active>
    <description>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</description>
    <errorConditionFormula>AND(ISPICKVAL(Object__c, &quot;Configuration Attribute&quot;), NOT(ISPICKVAL(Rule__r.TargetObject__c, &quot;Configurator&quot;)))</errorConditionFormula>
    <errorMessage>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</errorMessage>
</ValidationRule>