Salesforce CPQ/main/default/objects/PriceCondition__c/validationRules/Config_attr_tested_object_with_formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Config_attr_tested_object_with_formula</fullName>
    <active>true</active>
    <description>Configuration Attribute as a tested object can’t be evaluated against a formula.</description>
    <errorConditionFormula>AND(ISPICKVAL(Object__c, &quot;Configuration Attribute&quot;), (ISPICKVAL(FilterType__c, &quot;Formula&quot;)))</errorConditionFormula>
    <errorMessage>Configuration Attribute as a tested object can’t be evaluated against a formula.</errorMessage>
</ValidationRule>