Salesforce CPQ/main/default/objects/PriceCondition__c/validationRules/Filter_formula_field_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Filter_formula_field_null</fullName>
    <active>true</active>
    <description>Require Filter Formula when Filter Type is Formula.</description>
    <errorConditionFormula>AND(ISPICKVAL(FilterType__c, &quot;Formula&quot;), ISBLANK(FilterFormula__c))</errorConditionFormula>
    <errorMessage>If Filter Type is Formula, then Filter Formula cannot be empty.</errorMessage>
</ValidationRule>