Salesforce CPQ/main/default/objects/PriceCondition__c/validationRules/Tested_field_or_variable.validationRule-meta.xml
<ValidationRule>
    <fullName>Tested_field_or_variable</fullName>
    <active>true</active>
    <description>Require either tested field or variable.</description>
    <errorConditionFormula>AND(ISBLANK(TEXT(Field__c)),ISBLANK(TestedVariable__c),ISBLANK(TestedFormula__c))</errorConditionFormula>
    <errorMessage>You must specify either field or tested variable.</errorMessage>
</ValidationRule>